Added sycare test plugin
run test with "mvn test"